# overpass-api-python-wrapper

./: .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  Overpass.py  Pipfile  README.md  README.rst  mise.toml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_api.py  tox.ini
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml
.pytest_cache/v/cache/: nodeids
Overpass/: Overpass.py  queries.py
docs/: geojson-fixtures.md  live-queries.md  modernization-plan.md  modernization-tasks.md
examples/: .gitignore  README.md  boundary_nodes_city_ISO3166-1_US.py  cell_towers.py  overpassify_example.py  readme_example.py  turn_restriction_relations_as_list.py  unique_users_for_area.py
examples/django_example/: README.md  db.sqlite3  requirements.txt
examples/django_example/django_example/: settings.py  urls.py  wsgi.py
examples/django_example/leafletapp/: apps.py  views.py
examples/django_example/leafletapp/static/leafletapp/: leafletapp.css  overpass.js
examples/django_example/leafletapp/templates/leafletapp/: index.html
examples/plot_state_border/: main.py
overpass/: __init__.py  _base.py  api.py  async_api.py  cli.py  dependency.py  errors.py  models.py  queries.py  transport.py  utils.py
test/: test_api.py
tests/: __init__.py  conftest.py  example.geojson  example.json  example2.geojson  example2.json  example_body.geojson  example_body.json  example_live.json  example_mapquery.json  example_meta.geojson  example_meta.json  example_singlenode.json  test_api.py  test_async_api.py  test_cli.py  test_queries.py  test_status.py  test_utils.py
tests/fixtures/osmtogeojson/: example_body.geojson  example_mapquery.geojson  example_meta.geojson  example_singlenode.geojson
tests/overpass_status/: no_slots_waiting.txt  no_slots_waiting_six_lines.txt  one_slot_running.txt  one_slot_waiting.txt  two_slots_waiting.txt
tests/resources/: example.json  example.response  map_query_response.json  node_query_response.json
tools/: live_queries.py  osmtogeojson_fixture.js
