[project]
name = "overpass"
version = "0.7.2"
description = "A Python interface to the OpenStreetMap Overpass API"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "Martijn van Exel", email = "m@rtijn.org" }]
keywords = ["openstreetmap", "overpass", "wrapper"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Utilities",
]
dependencies = [
    "osm2geojson>=0.2.5",
    "requests>=2.32.3",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/mvexel/overpass-api-python-wrapper"
Repository = "https://github.com/mvexel/overpass-api-python-wrapper"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "geojson>=3.1.0",
    "requests-mock>=1.12.1",
    "deepdiff>=7.0.1",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "ty>=0.0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["overpass"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
include = ["overpass", "tests"]

[tool.pytest.ini_options]
markers = ["integration: network-dependent tests"]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"
